<resources>
    <string name="app_name">android_sensor_sample</string>
    <string name="number_dialog_title_name">TITLE_NUMBER_DIALOG</string>
    <string name="number_dialog_value_name">VALUE_NAME</string>
    <string name="number_dialog_unit_name">UNIT_NAME</string>
    <string name="number_dialog_btn_update_name">UPDATE</string>
    <string name="number_dialog_btn_cancel_name">CANCEL</string>
    <string name="sensor_details_type_name">Type</string>
    <string name="sensor_details_type_value">EMPTY_TYPE_VALUE</string>
    <string name="sensor_details_minDelay_name">Minimum Delay</string>
    <string name="sensor_details_minDelay_value">EMPTY_MIN_DELAY_VALUE</string>
    <string name="sensor_details_minDelay_unit_name">UNIT_NAME</string>
    <string name="sensor_details_resolution_name">Resolution</string>
    <string name="sensor_details_resolution_value">EMPTY_RESOLUTION_VALUE</string>
    <string name="sensor_details_name_name">Name</string>
    <string name="sensor_details_name_value">EMPTY_NAME_VALUE</string>
    <string name="sensor_details_vendor_name">Vendor</string>
    <string name="sensor_details_vendor_value">EMPTY_VENDOR_VALUE</string>
    <string name="sensor_event_delay_name">Delay</string>
    <string name="sensor_event_delay_value">EMPTY_DELAY_VALUE</string>
    <string name="sensor_event_delay_unit_name">UNIT_NAME</string>
    <string name="sensor_event_delay_update_name">Update</string>
    <string name="sensor_type_name">SENSOR_TYPE_NAME</string>
    <string name="sensor_detail_name">Details :</string>
    <string name="sensor_output_name">Output :</string>
    <string name="sensor_event_name">Event :</string>
    <string name="delay_number_dialog_title_name">Update Delay</string>
    <string name="sensor_accelerometer_name">Accelerometer</string>
    <string name="empty">EMPTY</string>
    <string name="update">Update</string>
    <string name="detail">Details</string>
    <string name="delay">Delay</string>
    <string name="colon">:</string>>
    <string name="microseconds">µs</string>
    <string name="miliseconds">ms</string>
    <string name="acceleration_unit_name">ms⁻²</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometer_x_name">x</string>
    <string name="accelerometer_x_value">EMPTY_X_VALUE</string>
    <string name="accelerometer_x_unit_name">X_UNIT_NAME</string>
    <string name="accelerometer_y_name">y</string>
    <string name="accelerometer_y_value">EMPTY_Y_VALUE</string>
    <string name="accelerometer_y_unit_name">Y_UNIT_NAME</string>
    <string name="accelerometer_z_name">z</string>
    <string name="accelerometer_z_value">EMPTY_Z_VALUE</string>
    <string name="accelerometer_z_unit_name">Z_UNIT_NAME</string>
    <string name="accelerometer_timestamp_name">Timestamp</string>
    <string name="accelerometer_timestamp_value">EMPTY_TIMESTAMP_VALUE</string>
</resources>
