<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accelerometer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/x_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/accelerometer_x_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/x_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dip"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_x_value" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="2sp" />

        <TextView
            android:id="@+id/x_unit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_x_unit_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/y_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/accelerometer_y_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/y_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dip"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_y_value" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="2sp" />

        <TextView
            android:id="@+id/y_unit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_y_unit_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/z_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/accelerometer_z_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/z_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dip"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_z_value" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="2sp" />

        <TextView
            android:id="@+id/z_unit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_z_unit_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timestamp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/accelerometer_timestamp_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timestamp_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dip"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/timestamp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerometer_timestamp_value" />

    </LinearLayout>

</LinearLayout>
