<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/enable_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_type_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sensor_detail_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/detail_expand_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/output_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_output_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/output_expand_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_event_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/event_expand_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
